enhancing tests for edge